--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Love page</title>
-</head>
+    <link rel="stylesheet" href="./assets/css/styles.css">
+</head> 
 <body>
-    <h1>Linha do tempo do amor</h1>
+    <div class="container">
+        <header>
+            <h1>Bem vinda!</h1>
+            <h2>Essa é a Timeline do nosso relacionamento!</h2>
+        </header>
+    </div>
 </body>
 </html>
