--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
             <h1>Bem vinda!</h1>
             <h2>Essa é a Timeline do nosso relacionamento!</h2>
         </header>
+        <ol>
+            <li>14/12/2024 - Nossa história começou com um convite seu para irmos ao cultural</li>
+            <li>15/12/2024 -  o fatidico dia que saimos de corsa e algo deu errado, bati o carro... Até hoje quase ninguém sabe disso. Desse dia em diante não nos desgrudamos mais.
+            </li>
+            <li><img src="./assets/images/primeira foto.jpg" alt="">19/12/2024 - Nossa primeira foto "juntos" tirada em e ai a gente já costumou a cochilar juntos"</li>
+            <li><img src="./assets/images/cristo.jpg" alt="">02/01/2025 - Primeira vez que fomos no cristo nesse dia eu me senti uma madame pq você me buscou em casa de carro</li>
+            <li><img src="./assets/images/mirante.jpg" alt="">15/01/2025 - Nossa primeira foto no mirante</li>
+            <li><img src="./assets/images/bar do antonio.jpg" alt="">25/01/2025 - O dia que mais fizemos fofoca, ofendemos umas 15 minorias diferentes e rimos até doer.</li>
+            <li><img src="./assets/images/foto linda.jpg" alt="">27/01/2025 - tiramos a nossa primeira foto bonita, você ama essa que eu sei.</li>
+            <li><img src="./assets/images/corrida_patrick.jpeg" alt="">04/02/2025 - Fomos correr com o patrick e depois batemos um hamgurgão!!!</li>
+            <li><img src="./assets/images/fotos na granja.jpg" alt="">22/02/2025 - segunda vez que fomos na granja e foi um dia gostosinho demais, como todos os dias contigo!</li>
+            <li>Por enquanto é só isso, precisamos registrar mais momentos juntos...</li>
+        </ol>
+        <button onclick="alert('Que momento lindo, Fábio sente muito sua falta!')">Clique aqui</button>
     </div>
 </body>
 </html>
