--- a/index.html
+++ b/index.html
@@ -13,17 +13,19 @@
             <h2>Essa é a Timeline do nosso relacionamento!</h2>
         </header>
         <ol>
-            <li>14/12/2024 - Nossa história começou com um convite seu para irmos ao cultural</li>
-            <li>15/12/2024 -  o fatidico dia que saimos de corsa e algo deu errado, bati o carro... Até hoje quase ninguém sabe disso. Desse dia em diante não nos desgrudamos mais.
+            <li><img src="./assets/images/Cultural.jpeg" alt="">14/12/2024 - Nossa história começou com um convite seu para irmos ao cultural</li>
+            <li><img src="./assets/images/pos-cultural.jpeg" alt="">14/12/2024 - Ainda nesse dia, após a festa eu fiz graça e fui tirar foto na frente do las maquinas.</li>
+            <li><img src="./assets/images/mirante_natal.jpeg" alt="">15/12/2024 -  o fatidico dia que saimos de corsa e algo deu errado, bati o carro... Até hoje quase ninguém sabe disso. Desse dia em diante não nos desgrudamos mais e essa é a unica foto desse dia.
             </li>
             <li><img src="./assets/images/primeira foto.jpg" alt="">19/12/2024 - Nossa primeira foto "juntos" tirada em casa, dai a gente já acostumou a cochilar juntos"</li>
             <li><img src="./assets/images/cristo.jpg" alt="">02/01/2025 - Primeira vez que fomos no cristo nesse dia eu me senti uma madame pq você me buscou em casa de carro</li>
-            <li><img src="./assets/images/mirante.jpg" alt="">15/01/2025 - Nossa primeira foto no mirante</li>
+            <li><img src="./assets/images/mirante.jpg" alt="">15/01/2025 - Nossa primeira foto juntos no mirante</li>
             <li><img src="./assets/images/bar do antonio.jpg" alt="">25/01/2025 - O dia que mais fizemos fofoca, ofendemos umas 15 minorias diferentes e rimos até doer.</li>
             <li><img src="./assets/images/foto linda.jpg" alt="">27/01/2025 - tiramos a nossa primeira foto bonita, você ama essa que eu sei.</li>
             <li><img src="./assets/images/corrida_patrick.jpeg" alt="">04/02/2025 - Fomos correr com o patrick e depois batemos um hamgurgão!!!</li>
+            <li><img src="./assets/images/filhos.jpeg" alt="">19/02/2025 - o dia que nossos filhos nasceram. Já tinhamos o ruperth e nessa dia tivemos o Jack e a Gigi, eram lindos gêmeos um pinguim e uma raposa, naah.</li>
             <li><img src="./assets/images/fotos na granja.jpg" alt="">22/02/2025 - segunda vez que fomos na granja e foi um dia gostosinho demais, como todos os dias contigo!</li>
-            <li>Por enquanto é só isso, precisamos registrar mais momentos juntos...</li>
+            <li><img src="./assets/images/Filhos2.jpeg" alt="">27/02/2025 - Nossos gêmeos se foram, nunca entendemos pq nos deixaram, foi tão triste, choro ate hoje sentindo falta deles...</li>
         </ol>
         <button onclick="alert('Que momento lindo, Fábio sente muito sua falta!')">Clique aqui</button>
 
