fix: text image

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ol>
             <li><img src="./assets/images/Cultural.jpeg" alt="">14/12/2024 - Nossa história começou com um convite seu para irmos ao cultural</li>
             <li><img src="./assets/images/pos-cultural.jpeg" alt="">14/12/2024 - Ainda nesse dia, após a festa eu fiz graça e fui tirar foto na frente do las maquinas.</li>
-            <li><img src="./assets/images/mirante_natal.jpeg" alt="">15/12/2024 -  o fatidico dia que saimos de corsa e algo deu errado, bati o carro... Até hoje quase ninguém sabe disso. Desse dia em diante não nos desgrudamos mais e essa é a unica foto desse dia.
+            <li><img src="./assets/images/mirante_natal.jpeg" alt="">15/12/2024 -  o fatidico dia que saimos de corsa e algo deu errado. Desse dia em diante não nos desgrudamos mais e essa é a unica foto desse dia.
             </li>
             <li><img src="./assets/images/primeira foto.jpg" alt="">19/12/2024 - Nossa primeira foto "juntos" tirada em casa, dai a gente já acostumou a cochilar juntos"</li>
             <li><img src="./assets/images/cristo.jpg" alt="">02/01/2025 - Primeira vez que fomos no cristo nesse dia eu me senti uma madame pq você me buscou em casa de carro</li>
